<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Revo</string>
    <string name="hello_world">Registration Form</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="Class">Class:</string>
    <string name="quali">Status:</string>
    <string name="age">Age:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="submit">Submit</string>

</resources>
