<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="#000000"
   
    >
    

    <TextView
            android:id="@+id/nameText"
            android:layout_column="1"
            android:layout_gravity="start"
            android:layout_row="1"
            android:text="@string/name"
            android:textColor="#800000" />
    <TextView
            android:id="@+id/nameValue"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_row="1"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:textColor="#800000"/>
            
     <TextView
                android:id="@+id/ClassText"
                android:layout_column="1"
                android:layout_gravity="start"
                android:layout_row="2"
                android:text="@string/Class" 
                android:textColor="#800000"
                />
     <TextView
                android:id="@+id/ClassValue"
                android:layout_column="2"
                android:layout_gravity="start"
                android:layout_row="2"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#800000"
                 />
     
     <TextView
                android:id="@+id/qualiText"
                android:layout_column="1"
                android:layout_gravity="start"
                android:layout_row="3"
                android:text="@string/quali" 
                android:textColor="#800000"/>
     
     <TextView
                android:id="@+id/qualiValue"
                android:layout_column="2"
                android:layout_gravity="start"
                android:layout_row="3"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#800000"/>
               
               <TextView
                   android:id="@+id/ageText"
                   android1:layout_height="wrap_content"
                   android:layout_column="1"
                   android:layout_gravity="start|top"
                   android:layout_row="4"
                   android:text="@string/age"
                   android:textColor="#800000" />

      <TextView
                android:id="@+id/ageValue"
                android:layout_column="2"
                android:layout_gravity="start"
                android:layout_row="4"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#800000"/>

      <TextView
          android:id="@+id/genderText"
          android1:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_gravity="start|top"
          android:layout_row="5"
          android:text="@string/gender" 
          android:textColor="#800000"/>
      
      <TextView
                android:id="@+id/genderValue"
                android:layout_column="2"
                android:layout_gravity="start"
                android:layout_row="5"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#800000"/>
        
                <TextView
                    android:id="@+id/emailText"
                    android1:layout_width="wrap_content"
                    android1:layout_height="327dp"
                    android:layout_column="1"
                    android:layout_row="6"
                    android:text="@string/email" 
                    android:textColor="#800000"/>
                
                
                <TextView
                android:id="@+id/emailValue"
                android:layout_column="2"
                android:layout_gravity="start"
                android:layout_row="6"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#800000"/>
                
                <Space
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="0" />
                
                <Space
                android:layout_width="64dp"
                android:layout_height="1dp"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                 android:layout_row="0"/> 
                 
                <Space
                android:layout_width="1dp"
                android:layout_height="10dp"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="2"/> 
                <Space
                android:layout_width="1dp"
                android:layout_height="10dp"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="4"/> 
                
                <Space
                android:layout_width="1dp"
                android:layout_height="10dp"
                android:layout_column="5"
                android:layout_gravity="fill_horizontal"
                android:layout_row="4"/> 
                
                
                    
                    
                    
                    
                     
</GridLayout>